# myclaw

./: .gitignore  README.md
.playwright-cli/: page-2026-03-26T01-39-11-566Z.yml  page-2026-03-26T01-39-58-298Z.yml
desktop/: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/rpa/: pyproject.toml
desktop/rpa/nebula_rpa/: __init__.py  cli.py  computer_use.py  engine.py  mac_wechat.py  models.py  playwright_bridge.py  runtime.py  sop.py
desktop/rpa/tools/: dump_ax_tree.swift  run_continuous_contact_guard.py  validate_target_refocus.py  vision_ocr.swift
desktop/src/renderer/: App.tsx  main.tsx  styles.css  vite-env.d.ts
desktop/src/shared/: contracts.ts
desktop/tools/: run_live_desktop_auto_reply_guard.js  validate_desktop_auto_reply_guard.js
server/: components.json  drizzle.config.ts  package-lock.json  package.json
server/app/: globals.css  layout.tsx  page.tsx
server/app/(admin)/: layout.tsx
server/app/actions/: admin.ts
server/app/login/: page.tsx
server/components/admin/: admin-sidebar.tsx  form-status-message.tsx  model-settings-tabs.tsx  page-header.tsx  system-settings-tabs.tsx
server/components/auth/: login-form.tsx  login-splash.tsx
server/components/brand/: myclaw-logo.tsx
server/components/landing/: ai-engine.tsx  all-modules.tsx  architecture.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  remote-command.tsx  rpa-engine.tsx
server/components/ui/: reveal.tsx  select.tsx  (+2 more)
server/lib/: config.ts  format.ts
(+31 files in other folders)
