[project]
name = "nebula-rpa"
version = "0.1.0"
description = "Python RPA engine for the MyClaw desktop executor."
requires-python = ">=3.12"
dependencies = [
  "playwright>=1.45.0",
  "uiautomation>=2.0.20; platform_system == 'Windows'",
  "pywinauto>=0.6.8; platform_system == 'Windows'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
